# drumui

./: .gitignore  AGENTS.md  LICENSE  biome.json  index.html  package.json
public/kits/analog-808/: manifest.json
src/: App.tsx  keyboardShortcuts.ts  laneTargeting.ts  timelineMath.ts  types.ts  useDrumTrainer.ts  useKeyboardShortcuts.ts  useLoopVisualTween.ts  useResizableLayout.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: audio.rs  dto.rs  kit.rs  lib.rs  main.rs  midi.rs
src/audio/: DrumPlaybackEngine.ts  NativePlaybackEngine.ts  PlaybackEngine.ts  drumVoicing.ts  playbackMath.ts
src/components/: EmptyState.tsx  FileLibrary.tsx  IconButton.tsx  KitVisualizer.tsx  MixerPanel.tsx  RangeControl.tsx  ShortcutKeycap.tsx  Timeline.tsx  TransportBar.tsx
src/hardware/: transport.ts
src/kit/: analog808.json  analog808.ts
src/midi/: fileAccess.ts  parseMidi.ts  useTauriMidiDrop.ts
src/styles/: App.scss  global.scss
src/tests/: drumVoicing.test.ts  keyboardShortcuts.test.ts  kitMapping.test.ts  laneTargeting.test.ts  lightEvents.test.ts  midiParser.test.ts  playbackMath.test.ts  timelineMath.test.ts
src/utils/: format.ts
