[package]
name = "drumui"
version = "0.1.0"
description = "Drum trainer that plays MIDI files through embedded samples with metronome, looping, and per-lane control."
authors = ["iUnstable0 <iunstable0@proton.me>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/iUnstable0/drumui"
categories = ["multimedia::audio"]
keywords = ["drums", "midi", "audio", "trainer", "tauri"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "drumui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
tauri = { version = "2.10.3", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
cpal = "0.16"
crossbeam-channel = "0.5"
hound = "3.5"
midly = "0.5"

[lints.rust]
unsafe_code = "forbid"
unused = { level = "warn", priority = -1 }

[lints.clippy]
unwrap_used = "warn"
panic = "warn"
print_stdout = "warn"
print_stderr = "warn"
dbg_macro = "warn"
todo = "warn"
